Added CRUD Method in Agama Controller
